--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,4 +1,4 @@
-.features {
+..features {
   display: flex;
   align-items: center;
   padding: 2rem 0;
@@ -6,6 +6,9 @@
 }
 
 .featureSvg {
-  height: 200px;
-  width: 200px;
+  width: 6.5rem;
+  height: 6.5rem;
+  margin: 0 auto 0.5rem auto;
 }
+
+.featureSvg img { display: block; }
